@@ -1,3 +1,7 @@
+Fri May 10 19:00:25 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* main.c (DESKTOP_FONT_NAME_KEY): get it to use the right key.
+
 2002-05-08  Jody Goldberg <jody@gnome.org>
 
 	* main.c (cb_dialog_response) : new.
